tests/baselines/reference/breakInIterationOrSwitchStatement4.errors.txt
tests/cases/compiler/breakInIterationOrSwitchStatement4.ts(1,15): error TS2304: Cannot find name 'something'.


==== tests/cases/compiler/breakInIterationOrSwitchStatement4.ts (1 errors) ====
    for (var i in something) {
                  ~~~~~~~~~
!!! error TS2304: Cannot find name 'something'.
      break;
    }